[gd_scene load_steps=13 format=2]

[ext_resource path="res://pantallas/origenF.gd" type="Script" id=1]
[ext_resource path="res://imagenes/trog2.png" type="Texture" id=2]
[ext_resource path="res://imagenes/trog1.png" type="Texture" id=3]
[ext_resource path="res://imagenes/fue1.png" type="Texture" id=4]
[ext_resource path="res://imagenes/fue2.png" type="Texture" id=5]
[ext_resource path="res://fuentes/Firestarter.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://imagenes/tempe.png" type="Texture" id=7]
[ext_resource path="res://imagenes/tempeA.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 6 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "fuegoA",
"speed": 4.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 40
outline_color = Color( 0.992157, 0.682353, 0.00784314, 1 )
font_data = ExtResource( 6 )

[node name="origenF" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 479, 346 )
frames = SubResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -3.0
margin_top = 2.0
margin_right = 1053.0
margin_bottom = 620.0

[node name="TimerCarga" type="Timer" parent="."]
one_shot = true

[node name="TimerDescarga" type="Timer" parent="."]

[node name="TimerControl" type="Timer" parent="."]

[node name="hud" type="Node2D" parent="."]

[node name="mensa" type="Label" parent="hud"]
modulate = Color( 0.972549, 0.0392157, 0.0392157, 1 )
self_modulate = Color( 0.694118, 0.0862745, 0.0862745, 1 )
margin_left = 142.0
margin_top = 64.0
margin_right = 436.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 3 )

[node name="TimerM" type="Timer" parent="hud/mensa"]

[node name="TimerInicio" type="Timer" parent="hud/mensa"]
one_shot = true

[node name="TimerGO" type="Timer" parent="hud/mensa"]
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="hud"]
position = Vector2( 843, 166 )
frames = SubResource( 2 )
animation = "fuegoA"

[node name="AnimatedSprite2" type="AnimatedSprite" parent="hud"]
position = Vector2( 426, 443 )
scale = Vector2( 1.00533, 0.957923 )
frames = SubResource( 2 )
animation = "fuegoA"

[node name="caliente" type="Sprite" parent="hud"]
position = Vector2( 239, 307 )
scale = Vector2( 0.833491, 0.72 )
texture = ExtResource( 7 )

[node name="fria" type="Sprite" parent="hud"]
position = Vector2( 239, 307 )
scale = Vector2( 0.833491, 0.72 )
texture = ExtResource( 8 )

[node name="cargando" type="Label" parent="hud"]
margin_left = 56.0
margin_top = 413.0
margin_right = 246.0
margin_bottom = 498.0
custom_colors/font_color = Color( 0.901961, 0.678431, 0.00784314, 1 )
custom_fonts/font = SubResource( 4 )
text = "espera 
cargando"

[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="timeout" from="TimerCarga" to="." method="_on_TimerCarga_timeout"]
[connection signal="timeout" from="TimerDescarga" to="." method="_on_TimerDescarga_timeout"]
[connection signal="timeout" from="TimerControl" to="." method="_on_TimerControl_timeout"]
[connection signal="timeout" from="hud/mensa/TimerM" to="." method="_on_TimerM_timeout"]
[connection signal="timeout" from="hud/mensa/TimerInicio" to="." method="_on_TimerInicio_timeout"]
[connection signal="timeout" from="hud/mensa/TimerGO" to="." method="_on_TimerGO_timeout"]
